<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gotcha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Screen -->
    <string name="splash_login">Login</string>
    <string name="splash_sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    
    <!-- Sign Up Screen -->
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="cancel">Cancel</string>

    <!-- Terms and Privacy -->
    <string name="term_and_privacy">
        Isque lacus quam, egestas ac tincidunt a, lacinia vel velit.
        Aenean facilisis nulla vitae urna tincidunt congue sed ut dui.
        Morbi malesuada nulla nec purus convallis consequat. Vivamus id mollis quam.\n\n

        Morbi ac commodo nulla. In condimentum orci id nisl volutpat bibendum.
        Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu.
        Vivamus rutrum nunc non neque consectetur quis placerat neque lobortis.
        Nam vestibulum, arcu sodales feugiat consectetur, nisl orci bibendum elit, eu euismod magna sapien ut nibh.
        Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst.\n\n

        Nam pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu velit.
        Proin metus odio, aliquam eget molestie nec, gravida ut sapien.
        Phasellus quis est sed turpis sollicitudin venenatis sed eu odio.
        Praesent eget neque eu eros interdum.iscing elit.
        tricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam.
    </string>

    <!-- Home Group Screen -->
    <string name="your_groups">YOUR GROUPS</string>

    <!-- Create Group Screen -->
    <string name="group_name">Group Name</string>
    <string name="set_group_fine">SET GROUP FINE</string>
    <string name="set_group_fine_desc">Here you set the numeric and metric amount of the group fine. For example push-ups or 10 Dollars.</string>
    <string name="seconding_nominations">SECONDING NOMINATIONS</string>
    <string name="seconding_nominations_desc">Define a length of time in which to allow fellow users to second a nomination.</string>
    
    <!-- Invite Group Member Screen -->
    <string name="add_group_members">ADD GROUP MEMBERS</string>
    <string name="invite_member_hint">By name, email or mobile number</string>
    <string name="add_group_members_hint">There needs to me a min 4 users to activate a group</string>

    <!-- My Dues Home Screen -->
    <string name="my_dues_description">
        Sorry for you, but its now time to pay your dues. Come on, get cracking and pay your fine.
    </string>

</resources>
