<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/main_bg_color"
    tools:context="com.src.adrien.gotcha.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/normal_button_height">

            <ImageView
                android:id="@+id/create_group_image"
                android:layout_width="@dimen/create_group_image_width"
                android:layout_height="@dimen/create_group_image_width"
                android:scaleType="centerCrop"
                android:src="@drawable/add_group_photo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <Button
                android:id="@+id/create_group_image_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/add_group_photo_mask"
                android:layout_alignLeft="@+id/create_group_image"
                android:layout_alignRight="@+id/create_group_image"
                android:layout_alignTop="@+id/create_group_image"
                android:layout_alignBottom="@+id/create_group_image"/>

            <EditText
                android:id="@+id/create_group_name_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_toRightOf="@+id/create_group_image"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/group_name"
                android:textSize="@dimen/actionbar_title_small_size"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/create_group_fine_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/actionbar_title_small_size"
            android:textColor="@color/category_text_color"
            android:text="@string/set_group_fine"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_button_height"
            android:background="@android:color/white">

        </RelativeLayout>

        <TextView
            android:id="@+id/create_group_fine_desc_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/actionbar_title_small_size"
            android:textColor="@color/terms_text_color"
            android:text="@string/set_group_fine_desc"/>

        <TextView
            android:id="@+id/create_group_nomination_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="@dimen/actionbar_title_small_size"
            android:textColor="@color/category_text_color"
            android:text="@string/seconding_nominations"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_button_height"
            android:background="@android:color/white">

        </RelativeLayout>

        <TextView
            android:id="@+id/create_group_nomination_desc_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/actionbar_title_small_size"
            android:textColor="@color/terms_text_color"
            android:text="@string/seconding_nominations_desc"/>
    </LinearLayout>
</ScrollView>
